--- a/CSS - My site/css/styles.css
+++ b/CSS - My site/css/styles.css
@@ -1,3 +1,29 @@
-body{
-  background-color: blue;
+/* div{
+
+  background-color: #1eb2a6;
+
+} */
+.top_container
+{
+  background-color: #1eb2a6;
 }
+.middle_container{
+  background-color: red;
+  width: 200px;
+  height: 200px;
+
+}
+.bottom_container{
+  background-color: blue;
+  width: 200px;
+  height: 200px;
+}
+body{
+  margin: 0;
+}
+h1{
+  margin-top:0;
+}
+/* p{
+  padding-left: 30%;
+} */
