--- a/CSS - My site/css/styles.css
+++ b/CSS - My site/css/styles.css
@@ -3,27 +3,59 @@
   background-color: #1eb2a6;
 
 } */
+
+body{
+  margin: 0;
+  text-align: center;
+  /* It center everything in the center in the website */
+  /* font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;
+   */
+   font-family: 'Vollkorn', serif;
+
+}
+h1{
+  margin: 0 auto 0 auto;
+  /* top: right: bottom : left setting to make the text auto center */
+  font-family: 'Dancing Script', cursive;
+}
+
+h2
+{
+  font-family: 'Cormorant Garamond', serif;
+
+}
+h3
+{
+  font-family: 'Cormorant Garamond', serif;
+}
 .top_container
 {
   background-color: #1eb2a6;
+  padding-top: 100px;
 }
 .middle_container{
-  background-color: red;
-  width: 200px;
-  height: 200px;
 
 }
 .bottom_container{
-  background-color: blue;
-  width: 200px;
-  height: 200px;
 }
-body{
-  margin: 0;
+.Data{
+  text-decoration:underline;
 }
-h1{
-  margin-top:0;
+.bottom-cloud{
+  position: absolute;
+  left:100px;
+
 }
+.top-cloud{
+  position: absolute;
+  right:40px;
+  top: 20px;
+}
+/* .abs{
+  position: absolute;
+  right:30px;
+} */
+
 /* p{
   padding-left: 30%;
 } */
